@@ -597,20 +597,18 @@ public class FreeType {
 				return BufferUtils.newByteBuffer(1);
 			return getBuffer(address);
 		}
-		
-		/**
-		 * @return Pixmap representing the glyph, needs to be disposed manually.
-		 */
-		public Pixmap getPixmap(Format format) {
-			return getPixmap(format, Color.WHITE);
-		}
 
-		public Pixmap getPixmap(Format format, Color color) {
+		private static native ByteBuffer getBuffer(long bitmap); /*
+			FT_Bitmap* bmp = (FT_Bitmap*)bitmap;
+			return env->NewDirectByteBuffer((void*)bmp->buffer, bmp->rows * abs(bmp->pitch) * bmp->width);
+		*/
+
+		public Pixmap getPixmap(Format format, Color color, float gamma) {
 			int width = getWidth(), rows = getRows();
 			ByteBuffer src = getBuffer();
 			Pixmap pixmap;
 			int srcPitch = getPitch();
-			if (color == Color.WHITE && srcPitch == 1) {
+			if (color == Color.WHITE && srcPitch == 1 && gamma == 1) {
 				pixmap = new Pixmap(width, rows, Format.Alpha);
 				BufferUtils.copy(src, pixmap.getPixels(), pixmap.getPixels().capacity());
 			} else {
@@ -622,8 +620,9 @@ public class FreeType {
 					int yWidth = y * width;
 					for (int x = 0; x < width; x++) {
 						// use the color value of the foreground color, blend alpha
-						byte alpha = src.get(ySrcPitch + x);
-						dst.put(yWidth + x, (srcRGBA & 0xffffff00) | (int)((srcRGBA & 0xff) * (alpha & 0xff) / 255f));
+						float alpha = (src.get(ySrcPitch + x) & 0xff) / 255f;
+						alpha = (float)Math.pow(alpha, gamma); // Inverse gamma. 
+						dst.put(yWidth + x, (srcRGBA & 0xffffff00) | (int)((srcRGBA & 0xff) * alpha));
 					}
 				}
 			}
@@ -639,12 +638,7 @@ public class FreeType {
 			}
 			return converted;
 		}
-		
-		private static native ByteBuffer getBuffer(long bitmap); /*
-			FT_Bitmap* bmp = (FT_Bitmap*)bitmap;
-			return env->NewDirectByteBuffer((void*)bmp->buffer, bmp->rows * abs(bmp->pitch) * bmp->width);
-		*/
-		
+
 		public int getNumGray() {
 			return getNumGray(address);
 		}
